# kotran-server

./: .env  .env.dev  .env.prod  CHANGELOG  Cargo.toml  Directory.Build.props  Kotran.sln  LICENSE.md  README.md  diesel.toml  kotran.db
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: publish.yml
migrations/2024-09-04-132220_kotran/: up.sql
migrations/2024-09-04-132220_kotran_v1/: down.sql  up.sql
src/: config.rs  lib.rs  log.rs  main.rs
src/Kotran/: Kotran.csproj  Program.cs  Project.cs
src/Kotran.Engine/: Class1.cs  Kotran.Engine.csproj
src/database/: connection.rs  mod.rs  schema.rs
src/database/auth/: model.rs  repository.rs
src/database/filter/: model.rs
src/database/log/: model.rs
src/database/user/: model.rs
src/server/: error.rs  mod.rs
tests/Kotran.Benchmarks/: Program.cs
tests/Kotran.Tests/: UnitTest1.cs
tools/: publish.ps1
