[package]
name = "kotran"
description = "Kotran is an open source neural machine translator."
authors = ["Kotran <support@kotran.org>"]
repository = "https://github.com/kotran-org/kotran"
license = "MIT"
version = "0.1.0"
edition = "2021"
include = ["/data", "LICENSE"]
exclude = []

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
warp = "0.3"
clap = { version = "4.5.15", features = ["derive"] }
diesel = { version = "2.2.2", features = ["sqlite"] }
serde = "1.0"
serde_json = "1.0"
whatlang = "0.16.4"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false