[package]
name = "kotran"
description = "An open source neural machine translator."
authors = ["Kotran <support@kotran.org>"]
repository = "https://github.com/kotran-org/kotran"
license = "MIT"
version = "0.1.1"
edition = "2021"
include = [".env", "CHANGELOG", "LICENSE"]
exclude = []

[dependencies]
aho-corasick = "1.1.3"
backtrace = "0.3"
clap = { version = "4.5.16", features = ["derive", "env"] }
diesel = { version = "2.2.3", features = ["sqlite"] }
dotenvy = "0.15.7"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1.5.0"
metrics = "0.23.0"
ort = { version = "2.0.0-rc.5", features = [ "ndarray", "download-binaries", "half", "copy-dylibs", "cuda", "directml", "onednn" ] }
regex = "1.10"
rust-argon2 = "2.1.0"
rust_tokenizers = "8.1"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.0"
uuid = "1.10.0"
validator = { version = "0.18", features = ["derive"] }
warp = "0.3"
whatlang = "0.16.4"


[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false